log/build_2024-05-07_07-53-59/xbox/stderr.log
  File "/home/nvidia/master_ws/install/xbox/lib/python3.8/site-packages/xbox/new_control.py", line 367
    if normalized_realsense_array > max
                                      ^
SyntaxError: invalid syntax

